src/examples/valid/array.ra
func main(): void {
  print("Array 'a'");
  a = [1, 2, 3];
  for (i=0 to 2) {
    print(a[i]);
  }
  print("Array 'b'");
  b = [[1, 2, 3], [1, 2, 3]];
  for (i=0 to 1) {
    for (j = 0 to 2) {
      print(b[i][j]);
    }
  }
  print("Array 'c'");
  c = declare_arr<int>(3);
  for (i=0 to 2) {
    c[i] = i;
    print(c[i]);
  }
  print("Array 'd'");
  d = declare_arr<int>(2, 2);
  for (i=0 to 1) {
    for (j=0 to 1) {
      d[i][j] = i * 2 + j;
      print(d[i][j]);
    }
  }
}
