src/examples/invalid/static/array-list-missing-index.ra
func main(): void {
  a = declare_arr<int>(3);
  print(a);
}
